adaugat majoritatea temei 4 , nu merge importul deocamdata

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -61,6 +61,9 @@
                     <a class="nav-link" href="{{ path('app_logout') }}">Creeaza cont</a>
                 </li>
             {% endif %}
+            <li style="border-style: solid;border-width: 2px; margin-right:5px" class="nav-item">
+                <a class="nav-link" href="{{ path('app_clasament') }}">Clasament</a>
+            </li>
 {#            <li class="nav-item dropdown">#}
 {#                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">#}
 {#                    Dropdown link#}
