--- a/templates/main/main.html.twig
+++ b/templates/main/main.html.twig
@@ -16,21 +16,31 @@
         .grid-container {
             display: grid;
             grid-template-areas:
-                    "myArea myAREA"
-                    "myAreA myAREA";
+                    "myArea  myArea myAREA myAREA myAreA";
         }
     </style>
     <div style="height:100vh" class="grid-container">
-    <div  style="border-width: 2px;border-style: dashed;border-color: lightblue" class="item1"></div>
+    <div  style="border-width: 2px;border-style: dashed;border-color: lightblue" class="item1">
+        <iframe src="{{ path('app_clasament') }}" width="100%" height="100%"></iframe>
+    </div>
     <div  style="border-width: 2px;border-style: dashed;border-color: lightblue" class="item2">
         <ul>
-        <h5>Ultimele stiri din baschetul bucurestean</h5>
+        <h4>Ultimele stiri din baschetul bucurestean</h4>
             {% for stire in stiri %}
-                <div style = "border: 1px solid #000; width: 700px; word-break:break-all;"><li style="width:700px;height:100%"><a href="{{ path('app_watch',{"id" : stire.id}) }}"><div><h2>{{ stire.titlu }}</h2><br><h4>
-                                    {{ stire.rezumat }}</h4><br><h5>{{ stire.autor }}</h5></div></a><br>{% if nume is defined and rol is defined and (stire.autor == nume or rol == 2)%}<a href="{{ path('app_article_update',{"id":stire.id}) }}">Update</a><a href="{{ path('app_article_delete',{"id":stire.id}) }}">Delete</a>{% endif %}</li></div>
+                <div onclick="location.href='{{ path('app_watch',{"id" : stire.id}) }}'" style = "border: 1px solid #000; word-break:break-all; margin:10px"><li style="width:500px;height:100%"><a href="{{ path('app_watch',{"id" : stire.id}) }}" style="margin:30px"><div><h2>{{ stire.titlu }}</h2><br><h4>
+                                    {{ stire.rezumat }}</h4><br><h5>{{ stire.autor }}</h5></div></a><br>{% if nume is defined and rol is defined and (stire.autor == nume or rol == 2)%}<a href="{{ path('app_article_update',{"id":stire.id}) }}" style="margin:10px">Update</a><a href="{{ path('app_article_delete',{"id":stire.id}) }}">Delete</a>{% endif %}</li></div>
             {% endfor %}
         </ul>
     </div>
-    <div  style="border-width: 2px;border-style: dashed;border-color: lightblue" class="item3"></div>
+        <div  style="border-width: 2px;border-style: dashed;border-color: lightblue" class="item3">
+            {% if rol is defined and rol >= 1 %}
+            <a href="{{ path('app_export') }}">Export</a>
+                <br><br>
+                <form action="{{ path('app_import') }}" method="post" enctype="multipart/form-data">
+                    <input type="file" name="uploaded_file"/>
+                    <button type="submit">Importa stiri</button>
+                </form>
+            {% endif %}
+        </div>
     </div>
 {% endblock %}
