Gata si importul, mai ramane doar statistica

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,7 +41,7 @@
             </li>
             {% endif %}
             <li style="border-style: solid;border-width: 2px; margin-right:5px" class="nav-item">
-                <a class="nav-link" href="#">Vezi barfele</a>
+                <a class="nav-link" href="{{path('app_stiri') }}">Vezi toate stirile</a>
             </li>
             {% if rol is defined %}
                 <li style="border-style: solid;border-width: 2px; margin-right:5px" class="nav-item">
