--- a/templates/main/main.html.twig
+++ b/templates/main/main.html.twig
@@ -34,10 +34,10 @@
     </div>
         <div  style="border-width: 2px;border-style: dashed;border-color: lightblue" class="item3">
             {% if rol is defined and rol >= 1 %}
-            <a href="{{ path('app_export') }}">Export</a>
-                <br><br>
+                <a href="{{ path('app_export') }}"><h5>Export</h5></a>
+                <br>
                 <form action="{{ path('app_import') }}" method="post" enctype="multipart/form-data">
-                    <input type="file" name="uploaded_file"/>
+                    <input type="file" name="uploaded_file"/><br><br>
                     <button type="submit">Importa stiri</button>
                 </form>
             {% endif %}
