cam gata proiectu, mai trebuie adaugat captcha la login

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,11 +35,11 @@
                 <a class="nav-link" href="{{ path('app_article') }}">Creeaza o stire!</a>
             </li>
             {% endif %}
-            {% if rol is defined %}
-                <li style="border-style: solid;border-width: 2px; margin-right:5px" class="nav-item">
-                <a class="nav-link" href="{{ path('app_article') }}">Adauga o noua barfa</a>
-            </li>
-            {% endif %}
+{#            {% if rol is defined %}#}
+{#                <li style="border-style: solid;border-width: 2px; margin-right:5px" class="nav-item">#}
+{#                <a class="nav-link" href="{{ path('app_article') }}">Adauga o noua barfa</a>#}
+{#            </li>#}
+{#            {% endif %}#}
             <li style="border-style: solid;border-width: 2px; margin-right:5px" class="nav-item">
                 <a class="nav-link" href="{{path('app_stiri') }}">Vezi toate stirile</a>
             </li>
