--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -22,9 +22,18 @@
                         <div class="card-body p-5 text-center">
 
                             <div class="mb-md-5 mt-md-4 pb-5">
-
+                                {% if error is defined and error == 1%}
+                                    <div class="alert alert-danger" role="alert">
+                                        Verificati din nou numele si parola
+                                    </div>
+                                {% endif %}
+                                {% if error is defined and error == 2%}
+                                    <div class="alert alert-danger" role="alert">
+                                        Ati gresit captcha ul
+                                    </div>
+                                {% endif %}
                                 <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-                                <p class="text-white-50 mb-5">Please enter your login and password!</p>
+                                <p class="text-white-50 mb-5">Please enter your username and password!</p>
 
                                 <div class="form-outline form-white mb-4">
                                     <input type="email" id="typeEmailX" name="typeEmailX" class="form-control form-control-lg" />
@@ -35,8 +44,15 @@
                                     <input type="password" id="typePasswordX" name="typePasswordX" class="form-control form-control-lg" />
                                     <label class="form-label" for="typePasswordX">Password</label>
                                 </div>
+                                {% if incercare is defined and incercare % 3 == 0 %}
+                                <img src="{{ asset("Captcha.php") }}" width = "400px">
 
-                                <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
+                                <div class="form-outline form-white mb-4">
+                                    <input id="captcha" name="captcha" class="form-control form-control-lg" />
+                                    <label class="form-label" for="captcha">Captcha</label>
+                                </div>
+                                {% endif %}
+{#                                <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>#}
 
                                 <button class="btn btn-outline-light btn-lg px-5" type="submit" name="Login" value="0">Login</button>
 
