--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <meta name="title" content="Baschet Bucurestean">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -26,7 +29,9 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="{{path('app_main')}}">Baschet Bucurestean <i class="fa-solid fa-basketball"></i></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon">
+
+        </span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
@@ -35,11 +40,6 @@
                 <a class="nav-link" href="{{ path('app_article') }}">Creeaza o stire!</a>
             </li>
             {% endif %}
-{#            {% if rol is defined %}#}
-{#                <li style="border-style: solid;border-width: 2px; margin-right:5px" class="nav-item">#}
-{#                <a class="nav-link" href="{{ path('app_article') }}">Adauga o noua barfa</a>#}
-{#            </li>#}
-{#            {% endif %}#}
             <li style="border-style: solid;border-width: 2px; margin-right:5px" class="nav-item">
                 <a class="nav-link" href="{{path('app_stiri') }}">Vezi toate stirile</a>
             </li>
@@ -67,39 +67,38 @@
             <li style="border-style: solid;border-width: 2px; margin-right:5px" class="nav-item">
                 <a class="nav-link" href="{{ path('app_stats') }}">Statistici</a>
             </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Dropdown link
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    {% if rol is defined and rol != 0 %}
-                <a class="nav-link" href="{{ path('app_article') }}">Creeaza o stire!</a>
+            {% if rol is defined and rol == 2 %}
+            <li style="border-style: solid;border-width: 2px; margin-right:5px" class="nav-item">
+                <a class="nav-link" href="{{ path('app_signup') }}">Creeaza cont</a>
+            </li>
             {% endif %}
-                     <a class="nav-link" href="{{path('app_stiri') }}">Vezi toate stirile</a>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Dropdown
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    {% if rol is defined and rol != 0 %}
+                <a class="dropdown-item" href="{{ path('app_article') }}">Creeaza o stire!</a>
+            {% endif %}
+                     <a class="dropdown-item" href="{{path('app_stiri') }}">Vezi toate stirile</a>
                     {% if rol is defined %}
-                        <a class="nav-link" href="{{ path('app_logout') }}">Ia o pauza</a>
+                        <a class="dropdown-item" href="{{ path('app_logout') }}">Ia o pauza</a>
                     {% endif %}
                     {% if rol is not defined %}
-                    <a class="nav-link" href="{{ path('app_login') }}">Login</a>
-                    <a class="nav-link" href="{{path('app_signup')}}">Sign up</a>
+                    <a class="dropdown-item" href="{{ path('app_login') }}">Login</a>
+                    <a class="dropdown-item" href="{{path('app_signup')}}">Sign up</a>
                     {% endif %}
-{#                    {% if rol is defined and rol == 2 %}#}
-{#                    <a class="nav-link" href="{{ path('app_logout') }}">Creeaza cont</a>#}
-{#                    {% endif %}#}
-                    <a class="nav-link" href="{{ path('app_clasament') }}">Clasament</a>
-                    <a class="nav-link" href="{{ path('app_stats') }}">Statistici</a>
+                    {% if rol is defined and rol == 2 %}
+                    <a class="nav-link" href="{{ path('app_logout') }}">Creeaza cont</a>
+                    {% endif %}
+                    <a class="dropdown-item" href="{{ path('app_clasament') }}">Clasament</a>
+                    <a class="dropdown-item" href="{{ path('app_stats') }}">Statistici</a>
+                    {% if rol is defined and rol == 2 %}
+                <a class="nav-link" href="{{ path('app_signup') }}">Creeaza cont</a>
+            {% endif %}
                 </div>
             </li>
-{#            <div style="width:100%"></div>#}
-{#            <ul class="navbar-nav">#}
-{#                <div style="width:20px"></div>#}
-{#            <li class="nav-item"><a class="facebook" href="https://www.facebook.com/TanasaPetrisor/"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a></li>#}
-{#                <div style="width:20px"></div>#}
-{#            <li class="nav-item"><a class="linkedin" href="https://www.linkedin.com/in/tanasa-florin-petrisor-709231229/"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a></li>#}
-{#                <div style="width:20px"></div>#}
-{#            <li class="nav-item"><a class="instagram" href="https://www.instagram.com/petrisor.tanasa/"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>#}
-{#                <div style="width:20px"></div>#}
-{#            </ul>#}
+
         </ul>
     </div>
 </nav>
