--- a/templates/main/main.html.twig
+++ b/templates/main/main.html.twig
@@ -19,6 +19,9 @@
         a:active {
             text-decoration: none;
         }
+        ul{
+            list-style: none;
+        }
         .item1 {
             grid-area: myArea;
         }
