--- a/templates/main/article.html.twig
+++ b/templates/main/article.html.twig
@@ -24,6 +24,9 @@
                                 <div class="mb-md-5 mt-md-4 pb-5">
 
                                     <h2 class="fw-bold mb-2 text-uppercase">{% if stire is defined %}Updateaza {% else %}Creeaza {% endif %}stirea</h2>
+                                    {% if stire is defined %}
+                                    <input type="hidden" name="updateStire" value="{{ stire.id }}">
+                                    {% endif %}
 
                                     <div class="form-outline form-white mb-4">
                                         <input id="typeEmailX" name="titluArt" class="form-control form-control-lg" value="{%if stire is defined %}{{ stire.titlu }}{% endif %}"/>
