--- a/templates/main/main.html.twig
+++ b/templates/main/main.html.twig
@@ -58,7 +58,7 @@
         <h4>Ultimele stiri din baschetul bucurestean</h4>
             {% for stire in stiri %}
                 <div onclick="location.href='{{ path('app_watch',{"id" : stire.id}) }}'" style = "border: 1px solid #000; word-break:break-all; margin:10px"><li style="width:500px;height:100%"><a href="{{ path('app_watch',{"id" : stire.id}) }}" style="margin:30px"><div><h2>{{ stire.titlu }}</h2><br><h4>
-                                    {{ stire.rezumat }}</h4><br>
+                                    {{ stire.rezumat | raw }}</h4><br>
                                 {% if stire.Poza1 is defined %}
                                     <img src="{{ stire.Poza1 }}" width="150px" style="margin:5px">
                                 {% endif %}
@@ -79,8 +79,12 @@
                 </form>
                     <br>
                 <form action="{{ path('app_import') }}" method="post" enctype="multipart/form-data">
-                    <input type="file" name="uploaded_file" margin="20px"/><br><br>
-                    <button type="submit" margin="20px">Importa stiri</button>
+                    <input type="file" name="uploaded_file" margin="20px"/><br>
+                    <button type="submit" margin="20px">Importa stiri</button><br>
+                </form>
+
+                <form action="{{ path('app_import_baschetro') }}">
+                    <button type="submit" margin="20px">Importa baschet.ro</button>
                 </form>
             {% endif %}
             <iframe width="100%" height="450 px" src="{{ path('app_stats') }}"></iframe>
