--- a/templates/main/stire.html.twig
+++ b/templates/main/stire.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
 {% if stire is defined %}
-    <div style = "border: 1px solid #000; width: 700px; word-break:break-all;">
+    <div style = "border: 1px solid #000; width: 700px; word-break:normal;">
     <h2>{{ stire.titlu }}</h2>
     <h3>{{ stire.text | raw}}</h3>
     <h5>{{ stire.autor }}</h5>
