adaugat stats cu

--- a/templates/main/stats.html.twig
+++ b/templates/main/stats.html.twig
@@ -14,6 +14,12 @@
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
         <script type="text/javascript"> {{ gc_draw(piechart2, 'div_chart2') }} </script>
+
+        <div id="div_chart3"></div>
+
+        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
+        <script type="text/javascript"> {{ gc_draw(piechart3, 'div_chart3') }} </script>
     </div>
     </div>
 {% endblock %}
