--- a/templates/main/clasament.html.twig
+++ b/templates/main/clasament.html.twig
@@ -1,5 +1,22 @@
 
 {% block body %}
+    <style>
+        a:link {
+            text-decoration: none;
+        }
+
+        a:visited {
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: none;
+        }
+
+        a:active {
+            text-decoration: none;
+        }
+    </style>
     <b>CONFERINTA A</b><br>
     <table>
         <thead>
